# gpt-decorators

./: LICENSE  README.md  pyproject.toml
src/gpt_decorators/: __init__.py  gpt_callable_func.py
